overflow section 4 fixed

--- a/src/style.css
+++ b/src/style.css
@@ -247,7 +247,7 @@ box-shadow: none;
   display: flex;
   flex-direction: column;
   /* padding: 2rem 1rem; */
-  height: 550px;
+  height: auto;
   /* max-width: 100%; */
 }
 /*Modal */
@@ -256,7 +256,8 @@ box-shadow: none;
 }
 .imageSection4 {
   margin-top: 1rem;
-  height: 100vh;
+  height: auto;
+  min-height: 200px;
   width: 100%;
 }
 #section5 {
@@ -331,6 +332,6 @@ footer {
   
 }
   #section5 {
-    margin-top: 30px;
+    /* margin-top: 30px; */
   }
 }
